# CS6245-DSWP

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  fib_iter.c  histogram.c  llist_compute.c  llist_heavy.c  llist_heavy_12.c  llist_sum.c  markov_chain_12.c  max_list.c
pass/: CMakeLists.txt  DSWPAnalyzer.cpp  DSWPTransform.cpp  PDG.cpp  PDG.h  Partition.cpp  Partition.h
reports/array_heavy_12/: heavy_a_loop0.json  heavy_a_loop0_cfg.dot  heavy_a_loop0_partition.dot  heavy_b_loop0_cfg.dot  heavy_b_loop0_pdg.dot  heavy_d_loop0.json  heavy_d_loop0_partition.dot  heavy_e_loop0_pdg.dot  heavy_f_loop0.json  heavy_f_loop0_cfg.dot  heavy_f_loop0_partition.dot  heavy_f_loop0_pdg.dot  heavy_g_loop0_cfg.dot  heavy_g_loop0_pdg.dot  heavy_h_loop0_cfg.dot  heavy_i_loop0.json  heavy_k_loop0.json  heavy_k_loop0_cfg.dot  heavy_k_loop0_partition.dot  heavy_k_loop0_pdg.dot  heavy_l_loop0_cfg.dot  main_loop0.json  main_loop0_cfg.dot  main_loop0_partition.dot  main_loop0_pdg.dot  sum_array_heavy_loop0.json  sum_array_heavy_loop0_cfg.dot  sum_array_heavy_loop0_partition.dot  sum_array_heavy_loop0_pdg.dot
reports/fib_iter/: fib_iter_loop0.json  fib_iter_loop0_cfg.dot  fib_iter_loop0_partition.dot  fib_iter_loop0_pdg.dot
reports/histogram/: histogram_loop0.json  histogram_loop0_cfg.dot  histogram_loop0_partition.dot  histogram_loop0_pdg.dot  main_loop0.json  main_loop0_cfg.dot  main_loop0_partition.dot  main_loop0_pdg.dot  main_loop1.json  main_loop1_cfg.dot  main_loop1_partition.dot  main_loop1_pdg.dot
runtime/: CMakeLists.txt  dswp_queue.cpp  dswp_queue.h  dswp_stages_sum_list.c
scripts/: build.sh  demo.sh  plot_stage_sweep.py  plot_stage_sweep_ice.py  plot_timing.py  run_all.sh  run_analyzer.sh  run_stage_sweep.sh  run_stage_sweep_ice.sh  run_transform.sh  summary.py  visualize.sh
supplemental/: make_diagrams.py
(+68 files in other folders)
